# oar-p2p

./: .gitignore  Cargo.toml  Containerfile  Containerfile.networking  Justfile  README.md  build.rs  demo.containerfile  demo.sh  oar-p2p.py  oar_p2p_net.py  pyproject.toml
.claude/commands/: release.md
.github/workflows/: release.yml
scripts/: README.md  benchmark-startup  benchmark.sh  build-static.sh  generate-schedule.sh  prepare-release.sh
src/: address_allocation_policy.rs  context.rs  latency_matrix.rs  machine.rs  main.rs  oar.rs  signal.rs
