[package]
name = "oar-p2p"
version = "0.0.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.40", features = ["env"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
