[project]
name = "oar-p2p-net"
version = "0.1.0"
description = "P2P network management tool for OAR cluster environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "diogo464", email = "noreply@d464.sh"},
]
license = {text = "MIT"}
keywords = ["p2p", "cluster", "oar", "hpc", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
oar-p2p-net = "oar_p2p_net:main"

[project.urls]
Homepage = "https://github.com/diogo464/oar-p2p-net"
Repository = "https://github.com/diogo464/oar-p2p-net"